; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_iseries_veth.c_veth_recycle_msg.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_iseries_veth.c_veth_recycle_msg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.veth_lpar_connection = type { i32, i32 }
%struct.veth_msg = type { i32, %struct.TYPE_2__, i32*, i32, i64 }
%struct.TYPE_2__ = type { i32*, i32* }

@DMA_TO_DEVICE = common dso_local global i32 0, align 4
@VETH_STATE_OPEN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"Non-pending frame (# %d) acked by LPAR %d.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.veth_lpar_connection*, %struct.veth_msg*)* @veth_recycle_msg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @veth_recycle_msg(%struct.veth_lpar_connection* %0, %struct.veth_msg* %1) #0 {
  %3 = alloca %struct.veth_lpar_connection*, align 8
  %4 = alloca %struct.veth_msg*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.veth_lpar_connection* %0, %struct.veth_lpar_connection** %3, align 8
  store %struct.veth_msg* %1, %struct.veth_msg** %4, align 8
  %7 = load %struct.veth_msg*, %struct.veth_msg** %4, align 8
  %8 = getelementptr inbounds %struct.veth_msg, %struct.veth_msg* %7, i32 0, i32 4
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %59

11:                                               ; preds = %2
  %12 = load %struct.veth_msg*, %struct.veth_msg** %4, align 8
  %13 = getelementptr inbounds %struct.veth_msg, %struct.veth_msg* %12, i32 0, i32 4
  store i64 0, i64* %13, align 8
  %14 = load %struct.veth_msg*, %struct.veth_msg** %4, align 8
  %15 = getelementptr inbounds %struct.veth_msg, %struct.veth_msg* %14, i32 0, i32 1
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 1
  %17 = load i32*, i32** %16, align 8
  %18 = getelementptr inbounds i32, i32* %17, i64 0
  %19 = load i32, i32* %18, align 4
  store i32 %19, i32* %5, align 4
  %20 = load %struct.veth_msg*, %struct.veth_msg** %4, align 8
  %21 = getelementptr inbounds %struct.veth_msg, %struct.veth_msg* %20, i32 0, i32 1
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load i32*, i32** %22, align 8
  %24 = getelementptr inbounds i32, i32* %23, i64 0
  %25 = load i32, i32* %24, align 4
  store i32 %25, i32* %6, align 4
  %26 = load %struct.veth_msg*, %struct.veth_msg** %4, align 8
  %27 = getelementptr inbounds %struct.veth_msg, %struct.veth_msg* %26, i32 0, i32 3
  %28 = load i32, i32* %27, align 8
  %29 = load i32, i32* %5, align 4
  %30 = call i32 @dma_mapping_error(i32 %28, i32 %29)
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %40, label %32

32:                                               ; preds = %11
  %33 = load %struct.veth_msg*, %struct.veth_msg** %4, align 8
  %34 = getelementptr inbounds %struct.veth_msg, %struct.veth_msg* %33, i32 0, i32 3
  %35 = load i32, i32* %34, align 8
  %36 = load i32, i32* %5, align 4
  %37 = load i32, i32* %6, align 4
  %38 = load i32, i32* @DMA_TO_DEVICE, align 4
  %39 = call i32 @dma_unmap_single(i32 %35, i32 %36, i32 %37, i32 %38)
  br label %40

40:                                               ; preds = %32, %11
  %41 = load %struct.veth_msg*, %struct.veth_msg** %4, align 8
  %42 = getelementptr inbounds %struct.veth_msg, %struct.veth_msg* %41, i32 0, i32 2
  %43 = load i32*, i32** %42, align 8
  %44 = icmp ne i32* %43, null
  br i1 %44, label %45, label %52

45:                                               ; preds = %40
  %46 = load %struct.veth_msg*, %struct.veth_msg** %4, align 8
  %47 = getelementptr inbounds %struct.veth_msg, %struct.veth_msg* %46, i32 0, i32 2
  %48 = load i32*, i32** %47, align 8
  %49 = call i32 @dev_kfree_skb_any(i32* %48)
  %50 = load %struct.veth_msg*, %struct.veth_msg** %4, align 8
  %51 = getelementptr inbounds %struct.veth_msg, %struct.veth_msg* %50, i32 0, i32 2
  store i32* null, i32** %51, align 8
  br label %52

52:                                               ; preds = %45, %40
  %53 = load %struct.veth_msg*, %struct.veth_msg** %4, align 8
  %54 = getelementptr inbounds %struct.veth_msg, %struct.veth_msg* %53, i32 0, i32 1
  %55 = call i32 @memset(%struct.TYPE_2__* %54, i32 0, i32 16)
  %56 = load %struct.veth_lpar_connection*, %struct.veth_lpar_connection** %3, align 8
  %57 = load %struct.veth_msg*, %struct.veth_msg** %4, align 8
  %58 = call i32 @veth_stack_push(%struct.veth_lpar_connection* %56, %struct.veth_msg* %57)
  br label %75

59:                                               ; preds = %2
  %60 = load %struct.veth_lpar_connection*, %struct.veth_lpar_connection** %3, align 8
  %61 = getelementptr inbounds %struct.veth_lpar_connection, %struct.veth_lpar_connection* %60, i32 0, i32 0
  %62 = load i32, i32* %61, align 4
  %63 = load i32, i32* @VETH_STATE_OPEN, align 4
  %64 = and i32 %62, %63
  %65 = icmp ne i32 %64, 0
  br i1 %65, label %66, label %74

66:                                               ; preds = %59
  %67 = load %struct.veth_lpar_connection*, %struct.veth_lpar_connection** %3, align 8
  %68 = getelementptr inbounds %struct.veth_lpar_connection, %struct.veth_lpar_connection* %67, i32 0, i32 1
  %69 = load i32, i32* %68, align 4
  %70 = load %struct.veth_msg*, %struct.veth_msg** %4, align 8
  %71 = getelementptr inbounds %struct.veth_msg, %struct.veth_msg* %70, i32 0, i32 0
  %72 = load i32, i32* %71, align 8
  %73 = call i32 @veth_error(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i32 %69, i32 %72)
  br label %74

74:                                               ; preds = %66, %59
  br label %75

75:                                               ; preds = %74, %52
  ret void
}

declare dso_local i32 @dma_mapping_error(i32, i32) #1

declare dso_local i32 @dma_unmap_single(i32, i32, i32, i32) #1

declare dso_local i32 @dev_kfree_skb_any(i32*) #1

declare dso_local i32 @memset(%struct.TYPE_2__*, i32, i32) #1

declare dso_local i32 @veth_stack_push(%struct.veth_lpar_connection*, %struct.veth_msg*) #1

declare dso_local i32 @veth_error(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
